4.x: Inject updates 5 - maven plugin (#8159)
* Refactored inject maven-plugin
* Fixed most of build issues.
* Flag to control whether to generate META-INF/services
* Added support for InjectionServices that are not singleton
* Handle generation of module component after last type is generated, rather than in processingOver, to avoid a warning
* Introduced ServiceProviderRegistry.java
* Validating helidon prefixed options
* Config bean registry is no longer a singleton, to support parallel build

Signed-off-by: Tomas Langer <tomas.langer@oracle.com>